# Network-Game

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  build-all.bat  build_docs.bat  test.bat
client/: client.cpp  client.h  main.cpp  renderer.cpp  renderer.h
cmake/: dependencies.cmake  marcros.cmake  options.cmake
common/: protocol.h
server/: main.cpp  server.cpp  server.h  session.cpp  session.h
